package ar.utn.ba.dsi.MetaMap.fuenteEstatica.modelo.entidades;

public enum Origen {
    ARCHIVO,
    CONTRIBUYENTE
}
