@startuml

Hecho --> Categoria
Hecho --> Ubicacion
Hecho --> Origen

LectorDeArchivosCSV ..|> ILectorDeArchivos
LectorDeArchivosCSV ..> HechoFactory

HechoFactoryCSVFile ..|> HechoFactory

FactoryLector --> ILectorDeArchivos
FactoryLector --> LectorDeArchivosCSV

HechoFactoryCSVFile --> Hecho

enum Origen{
    FUENTE_ESTATICA
}


'================== CONTENIDO ==================
class Categoria {
    - nombre: Strin
    - idCategoria: Long
}

class Ubicacion {
    - latitud: Double;
    - longitud: Double;
    - lugar: String;
}

class Hecho {
    - id: Long
    - titulo: String
    - descripcion: String
    - categoria: Categoria
    - ubicacion: Ubicacion
    - fechaAcontecimiento: LocalDateTime
    - fechaCarga: LocalDateTime
    - origen: Origen
    - enviado: Boolean
}

'================== IMPORTADOR ==================
class FactoryLector {
    + crearLector(File archivo): ILectorDeArchivos
    - obtenerExtension(String nombreArchivo): String
}

class HechoFactoryCSVFile{
    + crearHecho(String lineaLeida): Hecho
}

class LectorDeArchivosCSV{
    - hechoFactory: HechoFactory
    + importarHechos(File archivo): List<Hecho>
}

'================== INTERFACES ==================

interface HechoFactory {
    + crearHecho (String lineaLeida): Hecho
}

interface ILectorDeArchivos {
    + importarHechos(File archivo): List<Hecho>
}

@enduml